// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components: Text renders with custom color #999 1`] = `
<Text
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#f2f3f4",
        "fontSize": 14,
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  Text
</Text>
`;

exports[`components: Text renders with custom styles {fontSize: 12} 1`] = `
<Text
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#f2f3f4",
        "fontSize": 14,
        "fontWeight": "400",
      },
      Object {
        "fontSize": 12,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`components: Text renders with dark theme 1`] = `
<Text
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#f2f3f4",
        "fontSize": 14,
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  Text
</Text>
`;

exports[`components: Text renders with default (light theme) 1`] = `
<Text
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#234",
        "fontSize": 14,
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  Text
</Text>
`;
